--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,3 +31,15 @@ jobs:
       run: dotnet test --no-build --verbosity normal --configuration ${{ env.configuration }}
     - name: Publish
       run: dotnet publish --configuration ${{ env.configuration }} --output ${{ runner.temp }}/publish
+    - name: Upload the Publish Artifact
+      uses: actions/upload-artifact@v3.0.0
+      with:
+        name: publish_artifact
+        path: ${{ runner.temp }}/publish
+        retention_days: 30
+    - name: Upload a template Artifacts
+      uses: actions/upload-artifact@v3.0.0
+      with:
+        name: templates_artifact
+        path: ./templates/*
+        retention-days: 30 
